--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body {
   overflow-x: hidden;
   position: relative;
   height: auto;
+  margin: 20px 0;
 }
 
 .vendorBox {
@@ -72,7 +73,7 @@ body {
   display: flex;
   justify-content: flex-end;
   position: relative;
-  top: 45px;
+  top: 30px;
   right: 10px;
   gap: 10px;
 }
@@ -95,15 +96,17 @@ body {
   margin: 0 auto;
 }
 
-.filterButtons{
-  margin-bottom: 20px;
+.filterButtons {
   display: flex;
   justify-content: space-between;
 }
 
-.filterButtons button{
+.filterButtons button {
   width: 10rem;
   padding: 8px 0;
+  border-radius: 5px;
+  border: 1px solid black ;
+  margin: 25px 0;
 }
 
 .firmGroup {
@@ -148,7 +151,7 @@ body {
 
 .firmOffer {
   position: absolute;
-  bottom: 5px;
+  bottom: 0;
   left: 0;
   width: 100%;
   max-width: 88%;
@@ -174,8 +177,7 @@ body {
   color: gray;
 }
 
-.activeButton{
-
+.activeButton {
   background-color: aquamarine;
   color: black;
 }
@@ -202,7 +204,7 @@ body {
   border-radius: 5px;
 }
 
-.productSection h3{
+.productSection h3 {
   text-align: center;
   background-color: orange;
 }
@@ -271,7 +273,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     margin-left: 30px;
   }
   .firmOffer {
@@ -284,14 +286,14 @@ body {
     width: 300px;
   }
 
-  .productSection{
+  .productSection {
     padding: 0 10px;
   }
-  .productSection h3{
+  .productSection h3 {
     text-align: center;
     background-color: orange;
   }
-  .filterButtons button{
+  .filterButtons button {
     width: 5rem;
     padding: 5px;
     margin: 5px;
@@ -368,4 +370,99 @@ body {
   padding: 1rem;
   cursor: pointer;
   margin-top: 1rem;
+}
+
+/* all components top margin */
+
+.searchComponent,
+.helpComponent,
+.cartComponent,
+.loginComponent,
+.registerComponent,
+.profileComponent,
+.confirmAddressCompo,
+.orderSuccessComp {
+  margin-top: 100px;
+}
+/* search component */
+
+.searchCompsymbol{
+  font-size: 25px;
+  position: relative;
+  right: 85px;
+}
+/* cartComponent */
+
+
+.table th,
+.table td {
+  vertical-align: middle;
+}
+
+.img-thumbnail {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+
+.quantityControl button {
+  width: 40px;
+}
+
+.quantityControl span {
+  width: 40px;
+  text-align: center;
+}
+
+.totalPrice {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.placeOrderButton {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+}
+
+/* helpComponent */
+
+.helpComponent {
+  background-color: #f8f9fa;
+}
+
+.helpComponent .nav-pills .nav-link {
+  border-radius: 0;
+  color: #007bff;
+}
+
+.helpComponent .nav-pills .nav-link.active {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.helpComponent .card {
+  margin-bottom: 15px;
+}
+
+.helpComponent .card-header {
+  background-color: #f8f9fa;
+}
+
+.helpComponent .btn-link {
+  text-decoration: none;
+}
+
+.helpComponent .btn-link:hover {
+  text-decoration: underline;
+}
+
+.helpComponent h2 {
+  margin-bottom: 15px;
+}
+
+/* resgistration component */
+
+.registrationBody{
+  width: 550px;
 }
